--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
     working_directory: ~/-express-circle # directory where steps will run
     docker: # run the steps with Docker
-      - image: circleci/node:8.9 # ...with this image as the primary container; this is where all `steps` will run
+      - image: loyaltyone/docker-alpine-java-node/ # ...with this image as the primary container; this is where all `steps` will run
       #- image: mongo:3.4.4 # and this image as the secondary service container
       
       
