--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,19 +9,19 @@ jobs: # a collection of steps
       
     steps: # a collection of executable commands 
       - checkout
-      - run:
-          name: update-npm
-          command: 'sudo npm install -g npm@latest'
-      - restore_cache: # special step to restore the dependency cache
-          # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
-          key: dependency-cache-{{ checksum "package.json" }}
+#      - run:
+#          name: update-npm
+#          command: 'sudo npm install -g npm@latest'
+#      - restore_cache: # special step to restore the dependency cache
+#          # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
+#          key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: install-npm-wee
           command: npm install
-      - save_cache: # special step to save the dependency cache
-          key: dependency-cache-{{ checksum "package.json" }}
-          paths:
-            - ./node_modules
+#      - save_cache: # special step to save the dependency cache
+#          key: dependency-cache-{{ checksum "package.json" }}
+#          paths:
+#            - ./node_modules
       
       - run: bash <(curl -s https://scripts.scantist.com/staging/ci-circle-jar.sh)
     
